<resources>
    <string name="app_name">HostelMate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register_button">Register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_non_match">Password does not match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registration -->
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_register">Register Account</string>
    <string name="title_activity_home">HostelMate</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Stringsrelated to navigation drawer menu-->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="open"></string>
    <string name="close">Hostelmate</string>
    <string name="title_activity_test">testActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Announcements">This is the announcement fragment</string>
    <string name="Bicycle">This is the bicycle fragment</string>
    <string name="Booking">This is the booking fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="user_name">Name</string>
    <string name="user_class">Class of</string>
    <string name="user_Pillar">Pillar</string>
    <string name="user_block">Block</string>
    <string name="user_unit">Unit</string>

    <string-array name="Pillars">
        <item>ASD</item>
        <item>EPD</item>
        <item>ESD</item>
        <item>ISTD</item>
    </string-array>
    <string-array name="ClassOf">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="Block">
        <item>55</item>
        <item>57</item>
        <item>59</item>
    </string-array>
    <string-array name="Level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
